# NFLDrafter

./: .gitignore  README.md  STARTUP.md  debug_integration_tests.py  env.example  fantasy.db-shm  fantasy.db-wal  package-lock.json  package.json  pyproject.toml  requirements.txt  roadmap.md  start-dev.bat  start-dev.sh
api/: .coverage  cli.py  coverage.xml  debug_db.py  debug_nfl_data.py  fantasy.db-shm  fantasy.db-wal  pytest.ini  test_data.py
api/app/: db.py  deps.py  main.py  models.py  schemas.py  scoring.py
api/app/routers/: fantasy.py  players.py  yahoo.py
api/app/services/: nflverse.py
api/tests/: conftest.py
api/tests/integration/: test_scoring_flow.py
api/tests/unit/: test_api_endpoints.py  test_scoring.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/frontend/: index.html  postcss.config.js.html  tailwind.config.js.html
frontend/src/: App.tsx  api.ts
frontend/src/components/: ADPImport.tsx  CheatSheetExport.tsx  DraftRoom.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  LoadingSpinner.tsx  LoadingState.tsx  Navigation.tsx  OAuthCallback.tsx  PlayerBoard.tsx  PlayerDrawer.tsx  PlayerExplorer.tsx  RetryButton.tsx  RosterBar.tsx  ScoringBuilder.tsx  Skeleton.tsx  Tiering.tsx  Toast.tsx  VORP.tsx  Watchlist.tsx  YahooLeagueImport.tsx  YahooOAuth.tsx
frontend/src/hooks/: useFantasyPoints.ts  usePlayers.ts  usePoints.ts  useScoringProfiles.ts
frontend/src/services/: offlineCache.ts  queryPersistence.ts
(+55 files in other folders)
