[project]
name = "nfl-drafter"
version = "0.1.0"
description = "Local-first fantasy football scoring application with custom profiles and player analysis"
authors = [
    {name = "NFLDrafter Team", email = "team@nfldrafter.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "alembic>=1.13.0",
    "typer>=0.9.0",
    "pandas>=2.1.0",
    "feedparser>=6.0.0",
    "nfl-data-py>=0.3.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "authlib>=1.2.0",
    "starlette>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
nfl-drafter = "api.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
